copied the Zybo master xdc into the project directory.

--- a/hdmi_passthrough_720p.runs/impl_4/.vivado.begin.rst
+++ b/hdmi_passthrough_720p.runs/impl_4/.vivado.begin.rst
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado" Owner="marshall" Host="" Pid="20711">
+    <Process Command="vivado" Owner="marshall" Host="" Pid="21711">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado" Owner="marshall" Host="" Pid="22493">
     </Process>
 </ProcessHandle>
